kmymoney/mymoney/storage/mymoneydbdef.h
@@ -51,12 +51,15 @@ public:
                            const QString& itype = QString(),
                            const bool iprimary = false,
                            const bool inotnull = false,
-                           const int initVersion = 0):
+                           const int initVersion = 0,
+                           const int lastVersion = std::numeric_limits<int>::max()
+                          ):
       m_name(iname),
       m_type(itype),
       m_isPrimary(iprimary),
       m_isNotNull(inotnull),
-      m_initVersion(initVersion) {}
+      m_initVersion(initVersion),
+      m_lastVersion(lastVersion) {}
   MyMoneyDbColumn() {}
   virtual ~MyMoneyDbColumn() {}
 
@@ -90,12 +93,16 @@ public:
   int initVersion() const {
     return (m_initVersion);
   }
+  int lastVersion() const {
+    return (m_lastVersion);
+  }
 private:
   QString m_name;
   QString m_type;
   bool m_isPrimary;
   bool m_isNotNull;
   int m_initVersion;
+  int m_lastVersion;
 };
 
 /**
@@ -128,8 +135,9 @@ public:
                               const bool isigned = true,
                               const bool iprimary = false,
                               const bool inotnull = false,
-                              const int initVersion = 0):
-      MyMoneyDbColumn(iname, "", iprimary, inotnull, initVersion),
+                              const int initVersion = 0,
+                              const int lastVersion = std::numeric_limits<int>::max() ):
+      MyMoneyDbColumn(iname, "", iprimary, inotnull, initVersion, lastVersion),
       m_type(type),
       m_isSigned(isigned) {}
   virtual ~MyMoneyDbIntColumn() {}
@@ -431,6 +439,7 @@ private:
   TABLE(OnlineJobs)
   TABLE(PayeeIdentifier)
   TABLE(PluginInfo)
+  TABLE(CostCenter)
 
   VIEW(Balances)
 protected:
