kmymoney/mymoney/storage/mymoneystoragesql.h
@@ -467,6 +467,8 @@ private:
   int upgradeToV6();
   int upgradeToV7();
   int upgradeToV8();
+  int upgradeToV9();
+  int upgradeToV10();
 
   int createTables();
   void createTable(const MyMoneyDbTable& t, int version = std::numeric_limits<int>::max());
